<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">3D parallax wallpapers</string>
    <string name="app_description">Anime n more Live Wallpaper.</string>
    <string name="settings_generalTitle">Wallpaper Settings</string>
    <string name="settings_wallTitle">Choose Wallpaper</string>
    <string name="settings_extraTitle">Extras</string>
    <string name="settings_checkBoxTestTitle">Touch Effects</string>
    <string name="settings_MoveBoxTitle">OverTime Effects</string>
    <string name="settings_SetLockTitle">Lock Screen Live Wallpaper</string>
    <string name="settings_checkBoxTestSummary">Variation on effects with touch\n(Try multiple finger XD).</string>
    <string name="settings_listTestTitle">Live Wallpaper</string>
    <string name="settings_MoveBoxSummary">Variation on effects over a cyclic period.</string>
    <string name="settings_SetLockSummary">Set Live Wallpaper on Lock-Screen.\nFor devices that don\'t prompt this by deafualt.</string>
    <string name="settings_GyroTitle">Enable Gyroscope</string>
    <string name="settings_GyroSummary">keep disabled for accelerometer \n Double tap on wallpaper to re-centre axis.</string>
    <string name="settings_QATitle">Experiencing Black Screen?</string>
    <string name="settings_QASummary">Please white-list the app in task killers.\nExample: Clean Master ,CCleaner etc.\n\nXiaomi users\nAllow app to Auto Start in \nSettings >Permissions>Autostart\n\n This prevents wallpaper service kill.\n we\'re sorry for the inconvenience. </string>

    <string-array name="settings_listTestEntries">
        <item>parallax-Butterly</item>
        <item>parallax-Ironmen</item>
        <item>parallax-Transformer</item>
        <item>parallax-Hulk-Buster</item>
        <item>Shakugan no Shana B</item>
        <item>Sword Art Online Kirito</item>
        <item>Yukata Anime Girl</item>
        <item>Guilty Crown Inori</item>
        <item>Blue Exorcist A</item>
        <item>FairyTale Natsu</item>
        <item>Blue Exorcist B</item>
        <item>parallax-Paper Cut-Out</item>
        <item>parallax-Screen Crack </item>
        <item>Shakugan no Shana A</item>
        <item>parallax-Screen Crack 2</item>
        <item>parallax-RED HULK</item>
        <item>parallax-Dragons</item>
        <item>parallax-Naruto</item>
        <item>parallax-Rain</item>
        <item>parallax-Nature</item>
        <item>parallax-Wonderland Chester Cat</item>
        <item>parallax-Assassin\'s creed</item>
        <item>parallax-Avenger\'s</item>
        <item>HighSchool DXD</item>
        <item>NO GAME NO LIFE</item>
        <item>Warcraft fanwall</item>
        <item>Runescape - Hum Vs Bandos</item>
        <item>Batman VS Superman</item>
        <item>Fullmetal Alchemist</item>
        <item>Jungle Book</item>
        <item>Dragon Ball</item>
        <item>Kung-Fu Panda</item>
        <item>The Hulk</item>
        <item>Wolverine</item>
        <item>Winter Forest</item>
        <item>Bleach</item>
        <item>Guilty Crown</item>
        <item>Your lie in April A</item>
        <item>Your lie in April B</item>
        <item>Samurai Champloo</item>
        <item>A Guilty king</item>
    </string-array>
    <string-array name="settings_listTestEntryValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
    </string-array>
    <string-array name="image_ids">
        <item>@drawable/image9</item>
        <item>@drawable/image10</item>
        <item>@drawable/image11</item>
        <item>@drawable/image14</item>
        <item>@drawable/image5</item>
        <item>@drawable/image6</item>
        <item>@drawable/image7</item>
        <item>@drawable/image8</item>
        <item>@drawable/image1</item>
        <item>@drawable/image2</item>
        <item>@drawable/image3</item>
        <item>@drawable/image12</item>
        <item>@drawable/image13</item>
        <item>@drawable/image4</item>
        <item>@drawable/image15</item>
        <item>@drawable/image16</item>
        <item>@drawable/image17</item>
        <item>@drawable/image18</item>
        <item>@drawable/image19</item>
        <item>@drawable/image20</item>
        <item>@drawable/image21</item>
        <item>@drawable/image22</item>
        <item>@drawable/image23</item>
        <item>@drawable/image24</item>
        <item>@drawable/image25</item>
        <item>@drawable/image26</item>
        <item>@drawable/image27</item>
        <item>@drawable/image28</item>
        <item>@drawable/image29</item>
        <item>@drawable/image30</item>
        <item>@drawable/image32</item>
        <item>@drawable/image31</item>
        <item>@drawable/image33</item>
        <item>@drawable/image34</item>
        <item>@drawable/image35</item>
        <item>@drawable/image36</item>
        <item>@drawable/image37</item>
        <item>@drawable/image38</item>
        <item>@drawable/image39</item>
        <item>@drawable/image40</item>
        <item>@drawable/image41</item>
    </string-array>

    <string name="settings_button_otherAppsTitle">Other Apps from author</string>
    <string name="settings_button_supportTitle">Need help?</string>

    <!-- SYSTEM -->
    <string name="settings_toast_unavailable">Google Play is unavailable</string>
    <string name="service_name">LWPTemplate</string>
    <string name="support_email">harsimran1994@gmail.com</string>
    <string name="url_more">market://search?q=pub:purefaithstudio</string>
    <string name="title_activity_set_wallpaper">Live-Wallpaper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Promo</string>
    <string name="button">select wallpaper</string>
    <string name="setColor">Select Color Effect</string>
    <string name="setbckColor">Set Color</string>
    <string name="earn">Earn Points</string>
    <string name="WallPoints">Points:</string>
    <string name="SeekCat">Gyroscope/Accelerometer</string>
    <string name="title_activity_galery">galery</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Change this to your app key -->
    <string name="APP_KEY">s92dfthrsdeolv4</string>


    <!-- Change this to your app key secret -->
    <string name="APP_SECRET">orsfn2rcvpg3yt1</string>


</resources>